 2014-06-30 11:46  alexpeshkoff 
   M builds/posix/Makefile.in.client.gfix
   M builds/posix/Makefile.in.client.util
   M builds/posix/Makefile.in.embed.gfix
   M builds/posix/Makefile.in.embed.util
   M builds/posix/prefix.aix_powerpc_xlc
   M src/jrd/gds.cpp
   M src/jrd/isc.cpp
   M src/jrd/isc_proto.h
   M src/jrd/isc_sync.cpp
   M src/jrd/svc.cpp
   M src/jrd/trace/TraceConfigStorage.cpp
   M src/jrd/trace/TraceLog.cpp
Backported fix for CORE-4475: attempt to create lock files directory fails during cleanup

 2014-06-19 12:24  alexpeshkoff 
   M src/common/classes/alloc.cpp
   M src/common/classes/alloc.h
   M src/common/classes/fb_tls.h
   M src/common/classes/init.cpp
HPUX port - fixed assertion for RISC machines with compiler missing __thread support

 2014-06-18 10:47  alexpeshkoff 
   M src/jrd/common.h
   M src/jrd/isc_sync.cpp
AIX port

 2014-06-17 15:45  asfernandes 
   M src/jrd/dyn_def.epp
Fixed CORE-4452 - Can`t create two collations with different names if autoddl =OFF.

 2014-06-16 13:50  alexpeshkoff 
   M src/utilities/nbackup.cpp
Backported fix for CORE-4461: nbackup prints error messages to stdout instead stderr

 2014-06-13 10:52  dimitr 
   M doc/WhatsNew
Updated the docs.

 2014-06-12 15:56  asfernandes 
   M src/intl/lc_narrow.cpp
   M src/jrd/idx.cpp
Backported fix for CORE-4417 - gbak: cannot commit index ; primary key with german umlaut.

 2014-06-12 07:19  dimitr 
   M doc/WhatsNew
Updated the docs.

 2014-06-10 20:17  dimitr 
   M src/jrd/Database.cpp
   M src/jrd/Database.h
Patch by Nickolay Samofatov: avoid an AST overhead for heavily-loaded systems with many requests. This is committed into v2.5 only, so far I doubt v3 needs that.

 2014-06-10 20:05  dimitr 
   M src/jrd/opt.cpp
Fixed CORE-4460: Expressions containing some built-in functions may be badly optimized.

 2014-06-06 10:42  alexpeshkoff 
   M src/jrd/extds/InternalDS.cpp
Use GlobalPtr for static variable doing memory allocation

 2014-06-03 11:02  dimitr 