@@ -1,3 +1,8 @@
+ 2014-07-03 07:48  alexpeshkoff 
+   M configure.in
+   M src/jrd/os/posix/unix.cpp
+Fixed regression in 2.5.3 - fails to build on relatively old distros
+
  2014-06-30 11:46  alexpeshkoff 
    M builds/posix/Makefile.in.client.gfix
    M builds/posix/Makefile.in.client.util
